--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
   <title>Dutch Treat: @ViewBag.Title</title>
   <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="~/css/site.css" rel="stylesheet" />
+    @RenderSection("head" , false)
 </head>
 <body>
   <div class="row">
