--- a/Views/App/Shop.cshtml
+++ b/Views/App/Shop.cshtml
@@ -1,25 +1,31 @@
 ﻿@model IEnumerable<Product>
 @section Scripts {
-    <script src="~/ts/shopper.js"></script>
-    <script src="~/ts/main.js"></script>
+    <script src="~/client/polyfills.7d99fe739f19bbf4acee.js"></script>
+    <script src="~/client/runtime.4b1540bf51da5ef20c67.js"></script>
+    <script src="~/client/main.318b02c3069f6aab2f1b.js" asp-append-version="true"></script>
 }
-<h1>Shop</h1>
-<p>Count: @Model.Count()</p>
-<div class="row">
-  @foreach (var p in Model)
-  {
-  <div class="col-md-3">
-    <div class="border bg-light rounded p-1">
-      <img src="~/img/@(p.ArtId).jpg" class="img-fluid" alt="@p.Artist" />
-      <h3>@p.Category - @p.Size</h3>
-      <ul class="products-props">
-        <li>Price: $@p.Price</li>
-        <li>Artist: @p.Artist</li>
-        <li>Title: @p.Title </li>
-        <li>Description: @p.ArtDescription</li>
-      </ul>
-      <button id="buyButton" class="btn btn-success">Buy</button>
-    </div>
-  </div>
-  }
-</div>
+@section head {
+    <link href="~/client/styles.31d6cfe0d16ae931b73c.css" rel="stylesheet" />
+}
+<the-shop></the-shop>
+
+@*<h1>Shop</h1>
+    <p>Count: @Model.Count()</p>
+    <div class="row">
+      @foreach (var p in Model)
+      {
+      <div class="col-md-3">
+        <div class="border bg-light rounded p-1">
+          <img src="~/img/@(p.ArtId).jpg" class="img-fluid" alt="@p.Artist" />
+          <h3>@p.Category - @p.Size</h3>
+          <ul class="products-props">
+            <li>Price: $@p.Price</li>
+            <li>Artist: @p.Artist</li>
+            <li>Title: @p.Title </li>
+            <li>Description: @p.ArtDescription</li>
+          </ul>
+          <button id="buyButton" class="btn btn-success">Buy</button>
+        </div>
+      </div>
+      }
+    </div>*@
