--- a/Views/App/Shop.cshtml
+++ b/Views/App/Shop.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<Product>
 @section Scripts {
-    <script src="~/client/runtime.4b1540bf51da5ef20c67.js"></script>
-    <script src="~/client/polyfills.7d99fe739f19bbf4acee.js"></script>
+    <script src="~/client/main.js" asp-append-version="true"></script>
+    <script src="~/client/polyfills.js"></script>
+    <script src="~/client/runtime.js"></script>
     <script src="C:\Users\feral\OneDrive\Desktop\hhhhhhh\client\dist\client\main.318b02c3069f6aab2f1b.js" asp-append-version="true"></script>
-    <script src="~/client/main.118038014ed55511cb50.js" asp-append-version="true"></script>
-
+    <script src="C:\Users\feral\OneDrive\Desktop\hhhhhhh\client\dist\client\polyfills.7d99fe739f19bbf4acee.js"></script>
+    <script src="C:\Users\feral\OneDrive\Desktop\hhhhhhh\client\dist\client\runtime.4b1540bf51da5ef20c67.js"></script>
 }
 @section head {
-
-    <link href="~/client/styles.31d6cfe0d16ae931b73c.css" rel="stylesheet" />
+    <link href="~/client/styles.css" rel="stylesheet" />
+    <link href="C:\Users\feral\OneDrive\Desktop\hhhhhhh\client\dist\client\styles.31d6cfe0d16ae931b73c.css" rel="stylesheet" />
 }
 <the-shop></the-shop>
 
