--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,7 @@
         <product-list></product-list>
     </div>
     <div class="col-3">
-        <h1>Cart</h1>
+        <cart></cart>
     </div>
 
 
