--- a/Views/App/Shop.cshtml
+++ b/Views/App/Shop.cshtml
@@ -10,6 +10,7 @@
 @section head {
     <link href="~/client/styles.css" rel="stylesheet" />
     <link href="C:\Users\feral\OneDrive\Desktop\hhhhhhh\client\dist\client\styles.31d6cfe0d16ae931b73c.css" rel="stylesheet" />
+<base href="/App/Shop" />
 }
 <the-shop></the-shop>
 
